kubernetes/yml/hese/icom/ingress/ad-ingress-hese.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ad-hesse
spec:
  ingressClassName: nginx
  rules:
  - host: ad-evora.146.124.106.181.nip.io 
    http:
      paths:
      - path: /sphinx/ad
        backend:
          serviceName: ad-service
          servicePort: 8088
