kubernetes/yml/hese/icom/ingress/dtm-ingress-hese.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtm-hesse 
spec:
  ingressClassName: nginx
  rules:
  - host: evora.146.124.106.181.nip.io 
    http:
      paths:
      - path: /sphinx/dtm
        pathType: Prefix
        backend:
          service:
            name: dtm-service
            port:
              number: 8087
