kubernetes/yml/hese/icom/ingress/elasticsearch-ingress-hese.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-hese-ext
  namespace: pilot-evora
spec:
  ingressClassName: nginx
  rules:
  - host: elastic-evora.146.124.106.181.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-simavi-hesse
            port:
              number: 80
