kubernetes/yml/hese/icom/ingress/id-ingress-hese.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: id
  namespace: pilot-evora
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: evora.146.124.106.181.nip.io
    http:
      paths:
      - path: /sphinx/id
        backend:
          serviceName: id-service
          servicePort: 8089
