kubernetes/yml/hese/icom/ingress/id-ui-ingress-hese.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: id-ui
  namespace: pilot-evora
spec:
  ingressClassName: nginx
  rules:
  - host: evora.146.124.106.181.nip.io
    http:
      paths:
      - path: /id-ui
        backend:
          serviceName: ui-service 
          servicePort: 80
