kubernetes/yml/hese/icom/ingress/interactive-dashboards-ingress-hese.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interactive-dashboards
  namespace: pilot-evora
spec:
  ingressClassName: nginx
  rules:
  - host: evora.146.124.106.181.nip.io
    http:
      paths:
      - path: /interactive-dashboards
        pathType: Prefix
        backend:
          service:
            name: interactive-dashboards 
            port: 
              number: 3000
